# ai-financial-research-assistant

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  commitlint.config.mjs  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  commit_lint.yml
alembic/: env.py
alembic/versions/: 387da51a85bc_init.py  95900fffcf36_add_bm25_index_to_child_chunk.py  a989293f2ab7_create_user_table.py  bac3899e0118_add_vector_extension.py  e00b14820fd4_create_tables.py  e96b9dc89e24_add_document_chunks_and_ingestion_status.py  f3a2b1c0d9e8_add_graph_rag_tables.py
api/: auth_dependencies.py  config.py  db.py  main.py  utils.py
api/routers/: auth.py
api/schemas/: auth.py
financial_assistant/: utils.py
financial_assistant/ai/: community_detection.py  document_ingestion.py  graph_extraction.py
financial_assistant/api/: auth.py  server.py
financial_assistant/api/dependencies/: auth.py  forms.py
financial_assistant/api/routers/: auth.py  documents.py
financial_assistant/core/: config.py  db.py
financial_assistant/models/: __init__.py  document.py  graph.py  user.py
financial_assistant/schemas/: auth.py  document.py
tests/: conftest.py  test_auth.py  test_community_detection.py  test_documents.py  test_graph_extraction.py  utils.py
