[project]
name = "ai-financial-research-assistant"
version = "0.1.0"
description = "AI agent for financial research using FastAPI and Langgraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
